# pl_youtube

./: CMakeLists.txt  README.md  run.sh
include/: videofactory.h  videoinfo.h  videostat.h  videostatgaming.h  videostatgamingminecraft.h  videostatgamingnintendo.h  videostatgamingxbox.h  videostatmanager.h  videostattech.h  videostattechapple.h  videostattechgoogle.h
res/: videos-stats.csv
src/: CMakeLists.txt  main.cpp  videofactory.cpp  videoinfo.cpp  videostat.cpp  videostatgaming.cpp  videostatgamingminecraft.cpp  videostatgamingnintendo.cpp  videostatgamingxbox.cpp  videostatmanager.cpp  videostattech.cpp  videostattechapple.cpp  videostattechgoogle.cpp
